# master-thesis

./: .gitignore  README.md  main.cpp  myexec.sh  templateexec.sh
cpp_scratchpad/standard_library/: file-io-struct.cpp  file-io.cpp  file-management.cpp  formatted-char-io.cpp  string.cpp  unformatted-char-io.cpp
cpp_scratchpad/standard_template/: vector.cpp
cpp_scratchpad/templates/: template_class.cpp  templates.cpp
cuda_scratchpad/: .gitignore
cuda_scratchpad/vectorAdd/: Makefile  vectorAdd.cu
mpi_cuda_solver/: .gitignore  CMakeLists.txt  build-release.sh  load-module-build.sh  metrixplusplus-1.6.2.tar.gz:Zone.Identifier  metrixpp.db  slurm-test.sh  slurm.sh  srcmeasures.db
mpi_cuda_solver/app/: main.cu
mpi_cuda_solver/include/: base_matrix.h  common.h  kernels.cu  kernels.cuh  matrix.h
mpi_cuda_solver/lib/hemi/: execution_policy.h  hemi.h
mpi_cuda_solver/license/: license.txt
mpi_cuda_solver/src/: base_matrix.cpp  common.cpp  kernels.cu  matrix.cpp
mpi_parallelized_solver/: CMakeLists.txt  build-release.sh  slurm.sh
mpi_parallelized_solver/app/: main.cpp
mpi_parallelized_solver/include/: base_matrix.h  common.h  matrix.h  solver.h
mpi_parallelized_solver/src/: base_matrix.cpp  matrix.cpp
mpi_parallelized_solver/src/cache/: cache_helpers.cpp
mpi_scratchpad/hello_world/: hello  hello.cpp
omp_parallelized_solver/: .gitignore  CMakeLists.txt  build-release.sh  main.cpp  slurm.sh
open_mp_tests/: CMakeLists.txt
open_mp_tests/exercise_1a/: helloworld.cpp
open_mp_tests/integrate_example/: integrate_example.cpp
sequential_pde_solver/: .gitignore  CMakeLists.txt  build-release.sh  main.cpp  slurm.sh
testcode/Tests/: .gitignore  CMakeLists.txt
testcode/Tests/PdeTests/: CMakeLists.txt  PdeTests.cpp  PdeTests.h  complex.cpp  complex.h  point.cpp  vector.cpp
